@@ -1,0 +1,39 @@
+#! @SH@
+#
+# -*-sh-mode-*-
+#
+#     Copyright (C) 2000 Ross Campbell <rcampbel@us.oracle.com>
+#     Copyright (C) 2000 Roland Rosenfeld <roland@spinnaker.de>
+#     Copyright (C) 2001 Utz-Uwe Haus <haus@uuhaus.de>
+# 
+#     This program is free software; you can redistribute it and/or modify
+#     it under the terms of the GNU General Public License as published by
+#     the Free Software Foundation; either version 2 of the License, or
+#     (at your option) any later version.
+# 
+#     This program is distributed in the hope that it will be useful,
+#     but WITHOUT ANY WARRANTY; without even the implied warranty of
+#     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#     GNU General Public License for more details.
+# 
+#     You should have received a copy of the GNU General Public
+#     License along with this program; if not, write to the Free
+#     Software Foundation, Inc., 59 Temple Place, Suite 330, Boston,
+#     MA 02111-1307 USA
+#
+# $Id$
+
+m_nispasswd_query()
+{
+    NISCAT=@NISCAT@
+
+    if [ -x "$NISCAT" ]	#check for niscat
+    then
+	f_user="`echo \"$@\" | sed -e 's/@.*//'`"
+	HOST="`lbdb_hostname`"
+
+	$NISCAT passwd.org_dir \
+	| grep -i $f_user \
+	| sed -e "s/^\([^:]*\):[^:]*:\([^:]*\):[^:]*:\([^:,]*\)[,:].*\$/\1@$HOST	\3	UID \2/"
+    fi
+}
